<resources>
    <string name="app_name">Findrest</string>

    <!--    Buttons     -->
    <string name="btn_search">Search</string>
    <string name="btn_geocode">Find near places</string>
    <string name="et_search">Search...</string>

    <!--    Others      -->
    <string name="search">Search</string>
    <string name="visited">Visited</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>

    <!--    Examples    -->
    <string name="item_name">Corleones pasta</string>
    <string name="item_address">Česká 34, Brno střed</string>
    <string name="item_rating">4.7</string>
    <string name="restaurant_name">Corleones pasta</string>
    <string name="restaurant_address">Česká 34, Brno střed</string>
    <string name="restaurant_url">http:corleone.cz/</string>
    <string name="restaurant_photos">http:corleone.cz/photos</string>
    <string name="restaurant_menu">http:corleone.cz/menu</string>
    <string name="restaurant_cuisines">Czech, Italian, Pizza</string>
    <string name="restaurant_rating">4.7</string>

    <!--    Fragments    -->
    <string name="fragment_search">Hello Search fragment</string>
    <string name="fragment_offline">Hello Offline fragment</string>
    <string name="fragment_geocode">Hello Geocode fragment</string>
    <string name="fragment_dailymenu">Hello Dailymenu fragment</string>
    <string name="fragment_restaurant">Hello Restaurant fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
