<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="100dp"
                                                   android:id="@+id/constraitLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="2dp"
            android:background="@drawable/bg_item_round"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="4dp"
            android:id="@+id/cardView" app:layout_constraintVertical_bias="0.6">

        <TextView
                android:id="@+id/tvRestaurantName"
                android:text="@string/item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/scheme1Red"
                android:maxLines="1"
                app:layout_constraintTop_toTopOf="@+id/ivRestaurantThumb"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart" android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp" app:layout_constraintEnd_toStartOf="@+id/icRestaurantMenu"/>

        <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ivRestaurantThumb"
                android:elevation="2dp"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@color/scheme1WhiteA9"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>

        <TextView
                android:text="@string/item_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:id="@+id/tvRestaurantAddress"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@+id/tvRestaurantName"
                app:layout_constraintStart_toEndOf="@+id/ivRestaurantThumb" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/icRestaurantMenu" android:layout_marginEnd="4dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:tint="@color/scheme1Red"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_star_black_24dp"
                android:id="@+id/ivRestaurantIcon" app:layout_constraintStart_toEndOf="@+id/ivRestaurantThumb"
                app:layout_constraintTop_toBottomOf="@+id/tvRestaurantAddress"
                android:layout_marginStart="4dp"/>
        <TextView
                android:text="@string/item_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:maxLines="1"
                android:id="@+id/tvRestaurantRating" app:layout_constraintStart_toEndOf="@+id/ivRestaurantIcon"
                app:layout_constraintTop_toTopOf="@+id/ivRestaurantIcon" android:layout_marginTop="4dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd" android:layout_marginEnd="4dp"/>
        <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp" app:srcCompat="@drawable/ic_restaurant_menu_black_24dp"
                android:id="@+id/icRestaurantMenu"
                android:tint="@color/scheme1Yellow"
                android:padding="12dp"
                android:elevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:cropToPadding="false"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="331dp"
                android:id="@+id/guidelineEnd"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="72dp"
                android:id="@+id/guidelineStart"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>